# mxsh

./: .gitignore  CMakeLists.txt  Makefile  README.md  scratch  scratch.c  sh_inter.c  shell
header/: sh_inter.h
src/: main.c  sh_inter.c
